--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-test2",
   "version": "1.0.0",
-  "description": "",
+  "description": "Gulp + sass + livereload example project (based on: https://gist.github.com/kellishouts/2c7cde625491ad53fb3c)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +11,13 @@
   "dependencies": {
     "gulp-connect": "^4.1.0",
     "gulp-sass": "^2.3.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gar13177/my_responsive_sass.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gar13177/my_responsive_sass/issues"
+  },
+  "homepage": "https://github.com/gar13177/my_responsive_sass#readme"
 }
